
msxlibdir=$(prefix)/cells/msxlib

msxlib_DATA=CATAL \
            an2_x05.ap \
            an2_x05.vbe \
            an2_x1.ap \
            an2_x1.vbe \
            an2_x2.ap \
            an2_x2.vbe \
            an3_x1.ap \
            an3_x1.vbe \
            an3_x2.ap \
            an3_x2.vbe \
            an4_x1.ap \
            an4_x1.vbe \
            an4_x2.ap \
            an4_x2.vbe \
            an4_x3.ap \
            an4_x3.vbe \
            aoi21_x05.ap \
            aoi21_x05.vbe \
            aoi21_x1.ap \
            aoi21_x1.vbe \
            aoi21_x2.ap \
            aoi21_x2.vbe \
            aoi22_x05.ap \
            aoi22_x05.vbe \
            aoi22_x1.ap \
            aoi22_x1.vbe \
            aoi22_x2.ap \
            aoi22_x2.vbe \
            aon21_x1.ap \
            aon21_x1.vbe \
            aon21_x2.ap \
            aon21_x2.vbe \
            aon22_x1.ap \
            aon22_x1.vbe \
            aon22_x2.ap \
            aon22_x2.vbe \
            bf1_w05.ap \
            bf1_w05.vbe \
            bf1_w2.ap \
            bf1_w2.vbe \
            bf1_x1.ap \
            bf1_x1.vbe \
            bf1_x2.ap \
            bf1_x2.vbe \
            bf1_x4.ap \
            bf1_x4.vbe \
            bf1_x8.ap \
            bf1_x8.vbe \
            bf1_y05.ap \
            bf1_y05.vbe \
            bf1_y1.ap \
            bf1_y1.vbe \
            bf1_y2.ap \
            bf1_y2.vbe \
            cgi2a_x05.ap \
            cgi2a_x05.vbe \
            cgi2a_x1.ap \
            cgi2a_x1.vbe \
            cgi2a_x2.ap \
            cgi2a_x2.vbe \
            cgi2_x05.ap \
            cgi2_x05.vbe \
            cgi2_x1.ap \
            cgi2_x1.vbe \
            cgi2_x2.ap \
            cgi2_x2.vbe \
            cgn2_x1.ap \
            cgn2_x1.vbe \
            cgn2_x2.ap \
            cgn2_x2.vbe \
            cgn2_x3.ap \
            cgn2_x3.vbe \
            cgn2_x4.ap \
            cgn2_x4.vbe \
            ha2_x2.ap \
            ha2_x2.vbe \
            iv1_w2.ap \
            iv1_w2.vbe \
            iv1_x05.ap \
            iv1_x05.vbe \
            iv1_x1.ap \
            iv1_x1.vbe \
            iv1_x2.ap \
            iv1_x2.vbe \
            iv1_x3.ap \
            iv1_x3.vbe \
            iv1_x4.ap \
            iv1_x4.vbe \
            iv1_x8.ap \
            iv1_x8.vbe \
            iv1_y2.ap \
            iv1_y2.vbe \
            Makefile.am \
            mxi2_x05.ap \
            mxi2_x05.vbe \
            mxi2_x1.ap \
            mxi2_x1.vbe \
            nd2ab_x1.ap \
            nd2ab_x1.vbe \
            nd2ab_x2.ap \
            nd2ab_x2.vbe \
            nd2a_x1.ap \
            nd2a_x1.vbe \
            nd2a_x2.ap \
            nd2a_x2.vbe \
            nd2_x05.ap \
            nd2_x05.vbe \
            nd2_x1.ap \
            nd2_x1.vbe \
            nd2_x2.ap \
            nd2_x2.vbe \
            nd2_x4.ap \
            nd2_x4.vbe \
            nd3_x05.ap \
            nd3_x05.vbe \
            nd3_x1.ap \
            nd3_x1.vbe \
            nd3_x2.ap \
            nd3_x2.vbe \
            nd3_x4.ap \
            nd3_x4.vbe \
            nd4_x05.ap \
            nd4_x05.vbe \
            nd4_x1.ap \
            nd4_x1.vbe \
            nd4_x2.ap \
            nd4_x2.vbe \
            nd4_x3.ap \
            nd4_x3.vbe \
            nr2a_x05.ap \
            nr2a_x05.vbe \
            nr2a_x1.ap \
            nr2a_x1.vbe \
            nr2_x05.ap \
            nr2_x05.vbe \
            nr2_x1.ap \
            nr2_x1.vbe \
            nr2_x2.ap \
            nr2_x2.vbe \
            nr3_x05.ap \
            nr3_x05.vbe \
            nr3_x1.ap \
            nr3_x1.vbe \
            nr4_x05.ap \
            nr4_x05.vbe \
            nr4_x1.ap \
            nr4_x1.vbe \
            oai21_x05.ap \
            oai21_x05.vbe \
            oai21_x1.ap \
            oai21_x1.vbe \
            oai21_x2.ap \
            oai21_x2.vbe \
            oai22_x05.ap \
            oai22_x05.vbe \
            oai22_x1.ap \
            oai22_x1.vbe \
            oai22_x2.ap \
            oai22_x2.vbe \
            oan21_x1.ap \
            oan21_x1.vbe \
            oan21_x2.ap \
            oan21_x2.vbe \
            oan22_x1.ap \
            oan22_x1.vbe \
            oan22_x2.ap \
            oan22_x2.vbe \
            or2_x1.ap \
            or2_x1.vbe \
            or3_x1.ap \
            or3_x1.vbe \
            or4_x1.ap \
            or4_x1.vbe \
            powmid_x0.ap \
            powmid_x0.vbe \
            rowend_x0.ap \
            rowend_x0.vbe \
            sff1_x4.ap \
            sff1_x4.vbe \
            sff2_x4.ap \
            sff2_x4.vbe \
            sff3_x4.ap \
            sff3_x4.vbe \
            tie_x0.ap \
            tie_x0.vbe \
            vddtie.ap \
            vddtie.vbe \
            vfeed1.ap \
            vfeed1.vbe \
            vfeed2.ap \
            vfeed2.vbe \
            vfeed3.ap \
            vfeed3.vbe \
            vfeed4.ap \
            vfeed4.vbe \
            vfeed5.ap \
            vfeed5.vbe \
            vfeed6.ap \
            vfeed6.vbe \
            vfeed7.ap \
            vfeed7.vbe \
            vfeed8.ap \
            vfeed8.vbe \
            vsstie.ap \
            vsstie.vbe \
            xaoi21_x05.ap \
            xaoi21_x05.vbe \
            xaoi21_x1.ap \
            xaoi21_x1.vbe \
            xaon21_x05.ap \
            xaon21_x05.vbe \
            xaon21_x1.ap \
            xaon21_x1.vbe \
            xaon22_x05.ap \
            xaon22_x05.vbe \
            xaon22_x1.ap \
            xaon22_x1.vbe \
            xnr2_x05.ap \
            xnr2_x05.vbe \
            xnr2_x1.ap \
            xnr2_x1.vbe \
            xor2_x05.ap \
            xor2_x05.vbe \
            xor2_x1.ap \
            xor2_x1.vbe

EXTRA_DIST=$(msxlib_DATA)

